Removed search bar from some pages,Corrected some translations,Corrected the management page navigation link,Modify the registration function (add account and mailbox non-duplicate judgment),Fixed the member homepage shaking problem

--- a/login.html
+++ b/login.html
@@ -195,9 +195,9 @@
             <!-- 導航內容 -->
             <div class="collapse navbar-collapse" id="navbarContent">
                 <!-- 搜尋欄 -->
-                <form class="d-flex mx-auto" onsubmit="return false;">
+                <!-- <form class="d-flex mx-auto" onsubmit="return false;">
                     <input class="form-control search-input" type="search" placeholder="Search books" id="searchInput">
-                </form>
+                </form> -->
 
                 <!-- 右側選單 -->
                 <ul class="navbar-nav ms-auto">
@@ -210,7 +210,7 @@
                     <!-- 登入/使用者選單 -->
                     <li class="nav-item dropdown">
                         <a class="nav-link" href="./login.html" id="loginLink">
-                            Login
+                            登入
                         </a>
                         <!-- 下拉選單 (預設隱藏) -->
                         <a class="nav-link dropdown-toggle d-none" href="#" id="userMenu" role="button"
@@ -221,7 +221,7 @@
                             <li><a class="dropdown-item" href="./member-profile.html">會員中心</a></li>
                             <li><a class="dropdown-item" href="./member-orders.html">我的訂單</a></li>
                             <li><a class="dropdown-item" href="./chat-room.html">聊天室</a></li>
-                            <li><a class="dropdown-item" href="#" id="logoutBtn">Logout</a></li>
+                            <li><a class="dropdown-item" href="#" id="logoutBtn">登出</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -234,10 +234,10 @@
         <div class="login-container">
             <!-- 登入標題區塊 -->
             <div class="login-header">
-                <h3>Login</h3>
+                <h3>登入</h3>
                 <div>
-                    <span class="text-white me-2">New User?</span>
-                    <a href="./register.html" class="btn-register text-decoration-none">Register</a>
+                    <span class="text-white me-2">新使用者?</span>
+                    <a href="./register.html" class="btn-register text-decoration-none">註冊</a>
                     <a href="./forgot-password.html" class="btn-register text-decoration-none">忘記密碼</a>
                 </div>
             </div>
@@ -269,7 +269,7 @@
                     <!-- 登入按鈕容器 -->
                     <div class="button-container">
                         <button type="submit" class="btn-login">
-                            Login
+                            登入
                         </button>
                     </div>
                 </form>
