--- a/admin/productcategory-update.html
+++ b/admin/productcategory-update.html
@@ -104,7 +104,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <!-- Logo -->
-            <a class="navbar-brand" href="./index.html">
+            <a class="navbar-brand" href="/index.html">
                 <i class="bi bi-book"></i> Book Cart
             </a>
 
@@ -116,22 +116,22 @@
             <!-- 導航內容 -->
             <div class="collapse navbar-collapse" id="navbarContent">
                 <!-- 搜尋欄 -->
-                <form class="d-flex mx-auto" onsubmit="return false;">
+                <!-- <form class="d-flex mx-auto" onsubmit="return false;">
                     <input class="form-control search-input" type="search" placeholder="Search books" id="searchInput">
-                </form>
+                </form> -->
 
                 <!-- 右側選單 -->
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="./shopping-cart.html">
+                        <a class="nav-link" href="/shopping-cart.html">
                             <i class="bi bi-cart3 fs-5"></i>
                             <span class="cart-badge">0</span>
                         </a>
                     </li>
                     <!-- 登入/使用者選單 -->
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="./login.html" id="loginLink">
-                            Login
+                        <a class="nav-link" href="/login.html" id="loginLink">
+                            登入
                         </a>
                         <!-- 下拉選單 (預設隱藏) -->
                         <a class="nav-link dropdown-toggle d-none" href="#" id="userMenu" role="button"
@@ -139,10 +139,10 @@
                             <span id="userDisplayName"></span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
-                            <li><a class="dropdown-item" href="./member-profile.html">會員中心</a></li>
-                            <li><a class="dropdown-item" href="./member-orders.html">我的訂單</a></li>
-                            <li><a class="dropdown-item" href="./chat-room.html">聊天室</a></li>
-                            <li><a class="dropdown-item" href="#" id="logoutBtn">Logout</a></li>
+                            <li><a class="dropdown-item" href="/member-profile.html">會員中心</a></li>
+                            <li><a class="dropdown-item" href="/member-orders.html">我的訂單</a></li>
+                            <li><a class="dropdown-item" href="/chat-room.html">聊天室</a></li>
+                            <li><a class="dropdown-item" href="#" id="logoutBtn">登出</a></li>
                         </ul>
                     </li>
                 </ul>
