--- a/checkout.html
+++ b/checkout.html
@@ -173,9 +173,9 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarContent">
-                <form class="d-flex mx-auto" onsubmit="return false;">
+                <!-- <form class="d-flex mx-auto" onsubmit="return false;">
                     <input class="form-control search-input" type="search" placeholder="搜尋書籍" id="searchInput">
-                </form>
+                </form> -->
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="./shopping-cart.html">
@@ -187,7 +187,7 @@
                     <li class="nav-item dropdown">
                         <!-- 登入連結 (未登入時顯示) -->
                         <a class="nav-link" href="./login.html" id="loginLink">
-                            Login
+                            登入
                         </a>
                         <!-- 用戶選單 (登入後顯示) -->
                         <a class="nav-link dropdown-toggle d-none" href="#" id="userMenu" role="button"
@@ -198,7 +198,7 @@
                             <li><a class="dropdown-item" href="./member-profile.html">會員中心</a></li>
                             <li><a class="dropdown-item" href="./member-orders.html">我的訂單</a></li>
                             <li><a class="dropdown-item" href="./chat-room.html">聊天室</a></li>
-                            <li><a class="dropdown-item" href="#" id="logoutBtn">Logout</a></li>
+                            <li><a class="dropdown-item" href="#" id="logoutBtn">登出</a></li>
                         </ul>
                     </li>
                 </ul>
