--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                     <li class="nav-item dropdown">
                         <!-- 登入連結 (未登入時顯示) -->
                         <a class="nav-link" href="./login.html" id="loginLink">
-                            Login
+                            登入
                         </a>
                         <!-- 用戶選單 (登入後顯示) -->
                         <a class="nav-link dropdown-toggle d-none" href="#" id="userMenu" role="button"
@@ -335,7 +335,7 @@
                             <li><a class="dropdown-item" href="./member-profile.html">會員中心</a></li>
                             <li><a class="dropdown-item" href="./member-orders.html">我的訂單</a></li>
                             <li><a class="dropdown-item" href="./chat-room.html">聊天室</a></li>
-                            <li><a class="dropdown-item" href="#" id="logoutBtn">Logout</a></li>
+                            <li><a class="dropdown-item" href="#" id="logoutBtn">登出</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -353,7 +353,7 @@
                     <!-- 分類項目將由JavaScript動態添加 -->
                 </ul>
 
-                <div class="price-filter">Price Filter</div>
+                <div class="price-filter">價格過濾器</div>
                 <div class="price-range">
                     <div class="d-flex justify-content-between mb-2">
                         <span id="minPrice">NT$ 100</span>
