--- a/member-orders.html
+++ b/member-orders.html
@@ -31,6 +31,16 @@
             background: #dc3545;
             color: white;
             font-size: 12px;
+            min-width: 18px;
+            /* 添加固定寬度 */
+            height: 18px;
+            /* 添加固定高度 */
+            display: flex;
+            /* 使用 flex 布局 */
+            align-items: center;
+            /* 垂直居中 */
+            justify-content: center;
+            /* 水平居中 */
         }
 
         .nav-item {
@@ -164,7 +174,7 @@
                     <li class="nav-item dropdown">
                         <!-- 登入連結 (未登入時顯示) -->
                         <a class="nav-link" href="./login.html" id="loginLink">
-                            Login
+                            登入
                         </a>
                         <!-- 用戶選單 (登入後顯示) -->
                         <a class="nav-link dropdown-toggle d-none" href="#" id="userMenu" role="button"
@@ -175,7 +185,7 @@
                             <li><a class="dropdown-item" href="./member-profile.html">會員中心</a></li>
                             <li><a class="dropdown-item" href="./member-orders.html">我的訂單</a></li>
                             <li><a class="dropdown-item" href="./chat-room.html">聊天室</a></li>
-                            <li><a class="dropdown-item" href="#" id="logoutBtn">Logout</a></li>
+                            <li><a class="dropdown-item" href="#" id="logoutBtn">登出</a></li>
                         </ul>
                     </li>
                 </ul>
