--- a/myorders.html
+++ b/myorders.html
@@ -120,9 +120,9 @@
             <!-- 導航內容 -->
             <div class="collapse navbar-collapse" id="navbarContent">
                 <!-- 搜尋欄 -->
-                <form class="d-flex mx-auto" onsubmit="return false;">
+                <!-- <form class="d-flex mx-auto" onsubmit="return false;">
                     <input class="form-control search-input" type="search" placeholder="Search books" id="searchInput">
-                </form>
+                </form> -->
 
                 <!-- 右側選單 -->
                 <ul class="navbar-nav ms-auto">
@@ -135,7 +135,7 @@
                     <!-- 登入/使用者選單 -->
                     <li class="nav-item dropdown">
                         <a class="nav-link" href="./login.html" id="loginLink">
-                            Login
+                            登入
                         </a>
                         <!-- 下拉選單 (預設隱藏) -->
                         <a class="nav-link dropdown-toggle d-none" href="#" id="userMenu" role="button"
@@ -146,7 +146,7 @@
                             <li><a class="dropdown-item" href="./member-profile.html">會員中心</a></li>
                             <li><a class="dropdown-item" href="./member-orders.html">我的訂單</a></li>
                             <li><a class="dropdown-item" href="./chat-room.html">聊天室</a></li>
-                            <li><a class="dropdown-item" href="#" id="logoutBtn">Logout</a></li>
+                            <li><a class="dropdown-item" href="#" id="logoutBtn">登出</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -158,7 +158,7 @@
     <div class="container mt-4">
         <!-- 訂單標題 -->
         <div class="bg-danger text-white p-3 mb-4">
-            <h4 class="m-0">My Orders</h4>
+            <h4 class="m-0">我的訂單</h4>
         </div>
 
         <!-- 搜尋框 -->
